first support for historical reports

--- a/app/views/files/new.html.erb
+++ b/app/views/files/new.html.erb
@@ -1,5 +1,4 @@
-<%= javascript_include_tag "jquery-ui.min.js"       %>
-<%= javascript_include_tag "members_autoselect.js"  %>
+<%= javascript_include_tag "files/all_new_files" %>
 
 <div id=x_container>
   <div id=x_body>
