added links to sample historical reports

--- a/app/views/reports/_h_Activity.html.erb
+++ b/app/views/reports/_h_Activity.html.erb
@@ -1,1 +1,2 @@
-Activity Report: UNDER CONSTRUCTION
+Activity Report: UNDER CONSTRUCTION<p></p>
+<a href='/files/sample_activity.xls' target='_blank'>sample report</a>
