--- a/app/views/reports/_h_MRA.html.erb
+++ b/app/views/reports/_h_MRA.html.erb
@@ -1,1 +1,2 @@
-MRA Report: UNDER CONSTRUCTION
+MRA Report: UNDER CONSTRUCTION<p></p>
+<a href='/files/sample_mra.pdf' target='_blank'>sample report</a>
