--- a/app/views/reports/_h_Summary.html.erb
+++ b/app/views/reports/_h_Summary.html.erb
@@ -1,1 +1,2 @@
-Summary Report: UNDER CONSTRUCTION
+Summary Report: UNDER CONSTRUCTION<p></p>
+<a href='/files/sample_summary.doc' target='_blank'>sample report</a>
