--- a/app/views/reports/_h_Detail.html.erb
+++ b/app/views/reports/_h_Detail.html.erb
@@ -1,1 +1,2 @@
-Detail Report: UNDER CONSTRUCTION
+Detail Report: UNDER CONSTRUCTION<p></p>
+<a href='/files/sample_detail.xlsx' target='_blank'>sample report</a>
