--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <div id="header" style="padding-top: 8px; padding-bottom: 5px;">
     <table width=100%><tr height=25>
       <td style="padding-bottom: 5px; font-size:23px;" width=250 valign=bottom>
-        <%= link_to_unless_current("BAMRU.net", '/') %>
+        <%= link_to_unless_current("CAMRU.net", '/') %>
       </td>
       <td align=center valign=bottom>
         <div id=subnav><%= raw header_nav%></div>
