--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -85,8 +85,10 @@
                     <b><%= link_to "Mobile",     '/mobile'         %></b> |
                     <b><%= link_to "Files",      '/files'          %></b> |
                     <b><%= link_to "Labs",       '/home/labs'      %></b> |
+                    <b><%= link_to "Registry",   '/registry'       %></b> |
                     <b><%= link_to "ChangeLog",  '/home/changelog' %></b> |
                     <b><%= link_to "Roadmap",    '/home/roadmap'   %></b>
+                  </td>
                 </tr>
               </table>
             </td>
