added leadership roles

--- a/app/views/registry/index.html.erb
+++ b/app/views/registry/index.html.erb
@@ -50,7 +50,7 @@
           <td><a href="/registry/member_alums">Member Alum</a><br/></td>
           <td>MA-<%= Member.role_count("MA") %> : Member Alum</td>
           <td>
-            <b>Member Alums</b> are formar Members who are no longer active with BAMRU.  Member Alumns can log into
+            <b>Member Alums</b> are former Members who are no longer active with BAMRU.  Member Alums can log into
             BAMRU.net, and may receive periodic communications from BAMRU.
           </td>
         </tr>
