--- a/app/views/registry/roles.html.erb
+++ b/app/views/registry/roles.html.erb
@@ -10,8 +10,19 @@
 </div>
 <div id=x_single_col>
 
-  <p></p>
-  <table class='tablesorter'>
+  <table width=100%>
+    <tr>
+      <td width=50%>
+        <b>Leadership Roles</b>
+      </td>
+      <td align=right>
+        <span style='font-size: 8pt;'>
+          For now, these assignments are hard-coded.  See Andy to make updates.
+        </span>
+      </td>
+    </tr>
+  </table>
+  <table class='tablesorter' style='margin-top: 0;'>
     <thead>
     <tr>
       <th>
@@ -26,7 +37,7 @@
     </tr>
     </thead>
     <tr>
-      <td width=120>John Chang</td>
+      <td width=120><%= raw role_link("UL") %></td>
       <td width=160>
         UL - Unit Leader
       </td>
@@ -35,43 +46,50 @@
       </td>
     </tr>
     <tr>
-      <td>Ethan Frantz</td>
+      <td><%= raw role_link("XO") %></td>
       <td>XO - Executive Officer</td>
       <td>
         Executive Officer
       </td>
     </tr>
     <tr>
-      <td>Kyle Barbour</td>
+      <td><%= raw role_link("OO") %></td>
       <td>OO - Operations Officer</td>
       <td>
         Operations Officer
       </td>
     </tr>
     <tr>
-      <td>Eszter Tompos</td>
+      <td><%= raw role_link("SEC") %></td>
       <td>SEC - Secretary</td>
       <td>
         Secretary
       </td>
     </tr>
     <tr>
-      <td>Chris Kantarjiev</td>
+      <td><%= raw role_link("TO") %></td>
       <td>TO - Training Officer</td>
       <td>
         Training Officer
       </td>
     </tr>
     <tr>
-      <td>Rachel Farrand</td>
+      <td><%= raw role_link("RO") %></td>
       <td>RO - Recruiting Officer</td>
       <td>
         Recruiting Officer
       </td>
     </tr>
     <tr>
-      <td>Cal Hoagland</td>
+      <td><%= raw role_link("TRS") %></td>
       <td>TRS - Treasurer</td>
+      <td>
+        Treasurer
+      </td>
+    </tr>
+    <tr>
+      <td><%= raw role_link("DO") %></td>
+      <td>DO - Duty Officer</td>
       <td>
         Treasurer
       </td>
