--- a/app/views/registry/notices.html.erb
+++ b/app/views/registry/notices.html.erb
@@ -4,12 +4,7 @@
     <tr>
       <td width=33% align=left><b>BAMRU Member Registry</b></td>
       <td width=33% align=center></td>
-      <td width=33% align=right>
-        <a href="/registry">Members</a>
-        <% if current_member.developer? %>
-            | <a href="/registry/alerts">Alerts</a>
-        <% end %>
-      </td>
+      <td width=33% align=right><a href="/registry">Members</a></td>
     </tr>
   </table>
 </div>
@@ -47,7 +42,7 @@
         UL - Unit Leader
       </td>
       <td>
-        Unit Leader
+        Unit Leader.
       </td>
     </tr>
     <tr>
@@ -61,56 +56,42 @@
       <td><%= raw role_link("OO") %></td>
       <td>OO - Operations Officer</td>
       <td>
-        Primary liason within the SAR community.
+        Operations Officer
       </td>
     </tr>
     <tr>
       <td><%= raw role_link("SEC") %></td>
       <td>SEC - Secretary</td>
       <td>
-        Updates BAMRU's charter, policies and procedures.
+        Secretary
       </td>
     </tr>
     <tr>
       <td><%= raw role_link("TO") %></td>
       <td>TO - Training Officer</td>
       <td>
-        Schedules trainings and recruits training leaders.
+        Training Officer
       </td>
     </tr>
     <tr>
       <td><%= raw role_link("RO") %></td>
       <td>RO - Recruiting Officer</td>
       <td>
-        Runs our annual recruiting campaign.
+        Recruiting Officer
       </td>
     </tr>
     <tr>
       <td><%= raw role_link("TRS") %></td>
       <td>TRS - Treasurer</td>
       <td>
-        Manages our finances and leads fundraising.
-      </td>
-    </tr>
-    <tr>
-      <td><%= raw role_link("REG") %></td>
-      <td>REG - Registrar</td>
-      <td>
-        Keeps our activity records up to date.
-      </td>
-    </tr>
-    <tr>
-      <td><%= raw role_link("WEB") %></td>
-      <td>WEB - Web Master</td>
-      <td>
-        Maintains our web systems.
+        Treasurer
       </td>
     </tr>
     <tr>
       <td><%= raw role_link("DO") %></td>
       <td>DO - Duty Officer</td>
       <td>
-        Initiates callouts and tracks field members.
+        Treasurer
       </td>
     </tr>
   </table>
