--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -55,20 +55,12 @@
             <a href="#" id=clearsort>Clear Sort Settings</a>
           </td>
           <td width=33%>
-            <input type="checkbox" id=gx_check> Show Inactive Guests
           </td>
           <td width=33%>
-            Recruiting Officer: TBD
+            Recruiting Officer: <%= raw role_link("RO") %>
           </td>
         </tr>
       </table>
     </div>
   </div>
-</div>
-
-<div id="cert_blanket" style="display: none;"></div>
-<div id="cert_popup"  style="display: none;">
-  <span id="popname"></span> has entered the following comment:<p></p>
-  "<span id="popcomment"></span>"<p></p>
-  <a href="#" onclick="close_popup();">Close</a>
 </div>
