--- a/app/views/registry/roles.html.erb
+++ b/app/views/registry/roles.html.erb
@@ -2,7 +2,7 @@
 <div id=x_header>
   <table width=100%>
     <tr>
-      <td width=33% align=left><b>BAMRU Member Registry</b></td>
+      <td width=33% align=left><b>BAMRU Registry</b></td>
       <td width=33% align=center></td>
       <td width=33% align=right>
         <a href="/registry">Members</a>
@@ -22,7 +22,7 @@
       </td>
       <td align=right>
         <span style='font-size: 8pt;'>
-          For now, these assignments are hard-coded.  See Andy to make updates.
+          See Andy to update the role assignments.
         </span>
       </td>
     </tr>
