removed conditional alert menu display

--- a/app/views/registry/index.html.erb
+++ b/app/views/registry/index.html.erb
@@ -6,10 +6,7 @@
           <td width=33% align=left><b>BAMRU Unit Registry</b></td>
           <td width=33% align=center></td>
           <td width=33% align=right>
-            <a href="/registry/roles">Roles</a>
-            <% if current_member.developer? %>
-              | <a href="/registry/alerts">Alerts</a>
-            <% end %>
+            <a href="/registry/roles">Roles</a> | <a href="/registry/alerts">Alerts</a>
           </td>
         </tr>
       </table>
