--- a/app/views/registry/roles.html.erb
+++ b/app/views/registry/roles.html.erb
@@ -5,10 +5,7 @@
       <td width=33% align=left><b>BAMRU Registry</b></td>
       <td width=33% align=center></td>
       <td width=33% align=right>
-        <a href="/registry">Members</a>
-        <% if current_member.developer? %>
-            | <a href="/registry/alerts">Alerts</a>
-        <% end %>
+        <a href="/registry">Members</a> | <a href="/registry/alerts">Alerts</a>
       </td>
     </tr>
   </table>
