added alert notifications

--- a/app/views/registry/alerts.html.erb
+++ b/app/views/registry/alerts.html.erb
@@ -34,7 +34,7 @@
       <td width=33% align=center></td>
       <td width=33% align=right>
         <a href="/registry">Members</a> |
-        <a href="/registry/roles">Roles</a>
+        <a href="/registry/roles">Roles</a> | Alerts
       </td>
     </tr>
   </table>
