--- a/app/views/registry/roles.html.erb
+++ b/app/views/registry/roles.html.erb
@@ -5,7 +5,7 @@
       <td width=33% align=left><b>BAMRU Registry</b></td>
       <td width=33% align=center></td>
       <td width=33% align=right>
-        <a href="/registry">Members</a> | <a href="/registry/alerts">Alerts</a>
+        <a href="/registry">Members</a> | Roles | <a href="/registry/alerts">Alerts</a>
       </td>
     </tr>
   </table>
