fixed message on footer of alert page

--- a/app/views/registry/alerts.html.erb
+++ b/app/views/registry/alerts.html.erb
@@ -66,7 +66,10 @@
   <table width=100% style="font-size: 10pt;">
     <tr>
       <td align=center>
-        NOTE: Email Generation is still UNDER CONSTRUCTION
+        <span style='font-size: 8pt;'>
+          Note: The styling of the alert emails is pretty bare-bones right now.
+          Contact Andy if you would like this to be beefed up...
+        </span>
       </td>
     </tr>
   </table>
