updated labs page

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -3,6 +3,18 @@
 These prototypes are for learning new software tools and techniques.  They are not feature-complete.<br/>
 Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Wiki</h3>
+<table>
+  <tr>
+    <td width=500>
+      Next-gen Wiki, based on GIT.  This prototype code is not yet<br/>
+      integrated with our authentication system or page styling.
+    </td>
+    <td  valign='middle' style='padding-left: 40px;'>
+      <%= link_to "http://#{request.env["HTTP_HOST"]}/wiki", '/wiki'  %>
+    </td>
+  </tr>
+</table>
 <h3 width=100% style='background: grey; padding: 3px; color: white;'>Messaging</h3>
 <table>
   <tr>
