initial support for integrated wiki

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -11,7 +11,7 @@ Let Andy know if you spot problems or have ideas for improvement.
       integrated with our authentication system or page styling.
     </td>
     <td  valign='middle' style='padding-left: 40px;'>
-      <%= link_to "http://#{request.env["HTTP_HOST"]}/wiki", '/wiki'  %>
+      <%= link_to "http://#{request.env["HTTP_HOST"]}/wikidemo", '/wikidemo'  %>
     </td>
   </tr>
 </table>
