--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -7,8 +7,8 @@ Let Andy know if you spot problems or have ideas for improvement.
 <table>
   <tr>
     <td width=500>
-      Next-gen Wiki, based on GIT.  This code contains all of the data from our <br/>
-      wiki, but needs considerable feature enhancements and data cleanup.
+      Next-gen Wiki, based on GIT.  This prototype contains all of the data from<br/>
+      our wiki, but needs considerable feature enhancements and data cleanup.
     </td>
     <td  valign='middle' style='padding-left: 40px;'>
       <%= link_to "http://#{request.env["HTTP_HOST"]}/wiki", '/wiki'  %>
