--- a/app/views/wizi/index.html.erb
+++ b/app/views/wizi/index.html.erb
@@ -18,7 +18,7 @@
       <% end %>
 
     </div>
-    <div id=x_footer>Under Construction...</div>
+    <div id=x_footer>Under Construction</div>
 
   </div>
 </div>
