wiki display is working

--- a/app/views/wiki/index.html.erb
+++ b/app/views/wiki/index.html.erb
@@ -1,24 +1,1 @@
-<div id=x_container>
-  <div id=x_wide_body>
-    <div id=x_header>
-      <table width=100%>
-        <tr>
-          <td align=left><b>BAMRU Wiki</b></td>
-          <td align=right>
-            <%= raw wiki_nav %>
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    <div id=x_single_col>
-
-      <% @pages.each do |page| %>
-        <%=  raw "<a href='/wiki/#{page.url_path}'>#{page.url_path}</a>" %><br/>
-      <% end %>
-
-    </div>
-    <div id=x_footer>Under Construction</div>
-
-  </div>
-</div>
+<%= render :partial => 'foundation', :locals => {:content => "<div style='width: 100%; text-align: center'>CONTENT TBD</div>"} %>
