--- a/app/views/wiki/new.html.erb
+++ b/app/views/wiki/new.html.erb
@@ -5,7 +5,8 @@
         <tr>
           <td align=left><b>BAMRU Wiki</b></td>
           <td align=right>
-            <%= raw wiki_nav %>
+            <%# raw wiki_nav %>
+            WIKI NAV
           </td>
         </tr>
       </table>
@@ -13,7 +14,7 @@
 
     <div id=x_single_col>
 
-      NEW WIKI FORM GOES HERE
+      WIKI NEW
 
     </div>
     <div id=x_footer> </div>
