--- a/app/views/wiki/show.html.erb
+++ b/app/views/wiki/show.html.erb
@@ -1,22 +1,2 @@
-<div id=x_container>
-  <div id=x_wide_body>
-    <div id=x_header>
-      <table width=100%>
-        <tr>
-          <td align=left><b>BAMRU Wiki</b></td>
-          <td align=right>
-            WIKI NAV GOES HERE
-          </td>
-        </tr>
-      </table>
-    </div>
+<%= render :partial => 'foundation', :locals => {:content => @page.try(:formatted_data)} %>
 
-    <div id=x_single_col>
-
-      <%= raw @page.formatted_data %>
-
-    </div>
-    <div id=x_footer> </div>
-
-  </div>
-</div>
