fixed event-link bug

--- a/app/views/wiki/_foundation.html.erb
+++ b/app/views/wiki/_foundation.html.erb
@@ -16,7 +16,7 @@
       <table width=100%  style='background: #c2cfd3;'>
         <tr>
           <td align=left><%= raw wiki_path %></td>
-          <td align=right><%= raw wiki_nav %></td>
+          <td align=right><%= raw nav %></td>
         </tr>
       </table>
 
