--- a/app/views/wiki/show.html.erb
+++ b/app/views/wiki/show.html.erb
@@ -1,2 +1,7 @@
-<%= render :partial => 'foundation', :locals => {:content => @page.try(:formatted_data)} %>
+<%= render :partial => 'foundation',
+           :locals  => {
+                   :nav     => wiki_show_nav,
+                   :content => @page.try(:formatted_data)
+           }
+%>
 
