updated internal AAR

--- a/app/views/event_reports/internal_aar.html.erb
+++ b/app/views/event_reports/internal_aar.html.erb
@@ -104,8 +104,7 @@
 
 <table class='stdTable'>
   <tr>
-    <td class='labelCell' width=105>REPORT</td>
-    <td class='valueCell'><%=  raw @event_report.description.gsub("\n\n", "<p></p>") %></td>
+    <td class='valueCell'><b style='padding-left: 48px; padding-right: 10px;'> REPORT </b> <%=  raw @event_report.description.gsub("\n\n", "<p></p>") %></td>
   </tr>
 </table>
 
