--- a/app/views/wiki/edit.html.erb
+++ b/app/views/wiki/edit.html.erb
@@ -4,6 +4,6 @@
     render :partial => 'foundation',
            :locals => {
                    :nav     => wiki_edit_nav,
-                   :content => "<textarea rows=25 cols=80 name='textt'>#{@page.raw_data}</textarea></form>"
+                   :content => "<textarea rows=25 cols=80 name='text_area'>#{@page.raw_data}</textarea></form>"
            }
 %>
