--- a/app/views/wiki/rename.html.erb
+++ b/app/views/wiki/rename.html.erb
@@ -1,22 +1,9 @@
-<div id=x_container>
-  <div id=x_wide_body>
-    <div id=x_header>
-      <table width=100%>
-        <tr>
-          <td align=left><b>BAMRU Wiki</b></td>
-          <td align=right>
-            <%= raw wiki_nav %>
-          </td>
-        </tr>
-      </table>
-    </div>
+<%= csrf_meta_tag %>
 
-    <div id=x_single_col>
-
-      WIKI RENAME
-
-    </div>
-    <div id=x_footer> </div>
-
-  </div>
-</div>
+<%=
+    render :partial => 'foundation',
+           :locals => {
+                   :nav     => wiki_rename_nav,
+                   :content => wiki_rename_content
+           }
+%>
