wiki create and delete operations work

--- a/app/views/wiki/_foundation.html.erb
+++ b/app/views/wiki/_foundation.html.erb
@@ -15,7 +15,7 @@
 
       <table width=100%  style='background: #c2cfd3;'>
         <tr>
-          <td align=left><%= raw wiki_path %></td>
+          <td align=left><%= raw wiki_nav_path %></td>
           <td align=right><%= raw nav %></td>
         </tr>
       </table>
