enable notifications for any user

--- a/app/views/registry/alerts.html.erb
+++ b/app/views/registry/alerts.html.erb
@@ -67,7 +67,7 @@
     <tr>
       <td align=center>
         <span style='font-size: 8pt;'>
-          Note: The styling of the alert emails is pretty bare-bones right now.
+          The styling/content of the alert emails is super bare-bones right now.
           Contact Andy if you would like this to be beefed up...
         </span>
       </td>
