--- a/app/views/reports/_h_Summary.html.erb
+++ b/app/views/reports/_h_Summary.html.erb
@@ -66,7 +66,7 @@
 <table class='topTable'>
   <tr>
     <td style='text-align: center;' class='valueCell'>
-      <b>SUMMARY TOTAL: <%=  @rsvc.summary_totals %></b><br/><%= raw @rsvc.summary_html %>
+      <b>SUMMARY TOTAL: <%=  @rsvc.summary_totals %></b><div style='font-size: 8pt;'><%= raw @rsvc.summary_html %></div>
     </td>
   </tr>
 </table>
