--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -65,6 +65,13 @@
         </tr>
         </thead>
         <tbody>
+        <tr>
+          <td>Summary</td>
+          <td>Unit-wide Activity Summary</td>
+          <td><input style='font-size: 8pt;' id="summary-start" type="text" value="<%= (Time.now - 1.year).strftime("%Y-%m-%d") %>"/></td>
+          <td><input style='font-size: 8pt;' id="summary-finish" type="text" value="<%= (Time.now).strftime("%Y-%m-%d") %>"/></td>
+          <td><a id="summary-link" href="/hreports/Summary.html" target='_blank'>HTML</a></td>
+        </tr>
           <% @historical_report_list.each do |report| %>
             <tr>
               <td><%= report[0] %></td>
