added foundation mockup pages

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -27,5 +27,16 @@ Let Andy know if you spot problems or have ideas for improvement.
     </td>
   </tr>
 </table>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Responsive UI</h3>
+<table>
+  <tr>
+    <td width=500>
+      Mockups for the responsive UI that will be used for the upcoming release of SMSO-ESB.net.
+    </td>
+    <td  valign='middle' style='padding-left: 40px;'>
+      <%= link_to "http://#{request.env["HTTP_HOST"]}/zesb/index", '/zesb/index'  %>
+    </td>
+  </tr>
+</table>
 <p></p>
 
