updated asset precompile for zurb

--- a/app/assets/stylesheets/zurb.css.scss
+++ b/app/assets/stylesheets/zurb.css.scss
@@ -1,12 +1,3 @@
-//= require_self
+//= require foundation
 
-//= require jquery-ui
-
-//= require_tree ./vendor
-
-//= require events
-
-//= require jcrop
-
-@import "foundation";
 
