cleaned up zurb index wording

--- a/app/views/zesb/index.html.erb
+++ b/app/views/zesb/index.html.erb
@@ -10,7 +10,6 @@
         </a>
       </h1>
     </li>
-    <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
   </ul>
 
   <section class="top-bar-section">
@@ -29,7 +28,7 @@
     <div class="row">
       <div class="large-12">
         Here are some page layout mockups for SMSO-ESB.net.  Click the blue buttons to browse.<p></p>
-        Each of these layouts should work on a desktop browser, tablet or smart phone. Try it out!<p></p>
+        All of the layouts work on a desktop browser, tablet or smart phone. Try it out!<p></p>
         <% %w(banded blog feed grid orbit banner sidebar contact marketing realty boxy store workspace).each do |tmpl| %>
             <a href='/zesb/<%= tmpl %>' class='large button'><%= tmpl.capitalize %></a>
         <% end %>
